--- a/action.yml
+++ b/action.yml
@@ -156,6 +156,10 @@ inputs:
     description: 'Allow to ignore the processing of pull requests that contains one of those project cards (multiline).'
     required: false
     default: ''
+  pull-request-only-with-project-cards:
+    description: 'Only allow the processing of pull requests that contains at least one project card.'
+    required: false
+    default: 'false'
   pull-request-only-any-project-cards:
     description: 'Only allow the processing of pull requests that contains one of those project cards (multiline).'
     required: false
