--- a/action.yml
+++ b/action.yml
@@ -120,6 +120,10 @@ inputs:
     description: 'Allow to process the issues.'
     required: false
     default: 'true'
+  issue-close-reason:
+    description: 'The reason when closing an issue (completed or not planned).'
+    required: false
+    default: 'not planned'
   # Pull request inputs
   ## Labels
   pull-request-stale-label:
@@ -237,6 +241,10 @@ inputs:
     description: 'Allow to process the pull requests.'
     required: false
     default: 'true'
+  pull-request-close-reason:
+    description: 'The reason when closing a pull request (completed or not planned).'
+    required: false
+    default: 'not planned'
   pull-request-to-draft-instead-of-stale:
     description: 'Convert the pull request to a draft pull request instead of handling it as a stale candidate.'
     required: false
