build(vercel): provide a dedicated config for vercel
The baseUrl was messing around.
Closes #829

--- a/documentation/package.json
+++ b/documentation/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
+    "start": "docusaurus start --config docusaurus.github.config.js ",
     "start:french": "npm run start -- --locale fr",
-    "build": "npm run generate-files && docusaurus build",
+    "build": "npm run generate-files && docusaurus build --config docusaurus.github.config.js",
+    "build:vercel": "npm run generate-files && docusaurus build --config docusaurus.vercel.config.js",
     "swizzle": "docusaurus swizzle",
-    "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
+    "clear": "docusaurus clear --config docusaurus.github.config.js",
+    "serve": "docusaurus serve --config docusaurus.github.config.js",
+    "write-translations": "docusaurus write-translations --config docusaurus.github.config.js",
     "write-translations:french": "npm run write-translations -- --locale fr",
     "write-heading-ids": "docusaurus write-heading-ids .",
     "write-heading-ids:changelog": "docusaurus write-heading-ids . docs/15-changelog.md",
