--- a/documentation/tsconfig.json
+++ b/documentation/tsconfig.json
@@ -15,6 +15,14 @@
     "rootDir": ".",
     "outDir": "lib"
   },
-  "include": ["src", "sidebars.js", "babel.config.js", "docusaurus.config.js", "scripts"],
+  "include": [
+    "src",
+    "sidebars.js",
+    "babel.config.js",
+    "docusaurus.core.config.js",
+    "docusaurus.github.config.js",
+    "docusaurus.vercel.config.js",
+    "scripts"
+  ],
   "exclude": ["**/__tests__/**/*", "src/client"]
 }
