--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "tsconfig-paths": "4.1.0",
     "ttypescript": "1.5.13",
     "typescript": "4.7.4",
-    "weak-napi": "2.0.2"
+    "weak-napi": "2.0.2",
+    "xregexp": "5.1.1"
   }
 }
