--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
     "\n# BUILD SCRIPTS:": "",
     "build": "npm run clean:dist && ncc build --license licenses.txt --minify",
     "build:dirty": "ncc build src/main.ts --license licenses.txt --minify",
+    "build:docs:vercel": "vercel pull && vercel build --prod",
+    "\n# DEPLOY SCRIPTS:": "",
+    "deploy:vercel:prod": "vercel deploy",
     "\n# TEST SCRIPTS:": "",
     "test": "jest --selectProjects unit integrationIssues integrationPullRequests",
     "test:integration:issues": "jest --selectProjects integrationIssues",
@@ -161,6 +164,7 @@
     "tsconfig-paths": "4.1.0",
     "ttypescript": "1.5.13",
     "typescript": "4.7.4",
+    "vercel": "28.2.0",
     "weak-napi": "2.0.2",
     "xregexp": "5.1.1"
   }
