--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "\n# BUILD SCRIPTS:": "",
     "build": "npm run clean:dist && ncc build --license licenses.txt --minify",
     "build:dirty": "ncc build src/main.ts --license licenses.txt --minify",
-    "build:docs:vercel": "vercel pull && vercel build --prod",
+    "build:docs:vercel": "vercel build --prod",
     "\n# DEPLOY SCRIPTS:": "",
     "deploy:vercel:prod": "vercel deploy",
     "\n# TEST SCRIPTS:": "",
@@ -100,7 +100,8 @@
     "commit-msg": "cross-env LOGGING_LEVEL=debug cz-customizable-ghooks",
     "post-commit": "git update-index --again",
     "install-git-hooks": "husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks",
-    "postversion": "node scripts/prepare-release.mjs"
+    "postversion": "node scripts/prepare-release.mjs",
+    "vercel:pull": "vercel pull"
   },
   "dependencies": {
     "@actions/core": "1.9.1",
