--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "build:dirty": "ncc build src/main.ts --license licenses.txt --minify",
     "build:docs:vercel": "vercel build --prod",
     "\n# DEPLOY SCRIPTS:": "",
-    "deploy:vercel:prod": "vercel deploy",
+    "deploy:vercel": "vercel deploy --prebuilt",
     "\n# TEST SCRIPTS:": "",
     "test": "jest --selectProjects unit integrationIssues integrationPullRequests",
     "test:integration:issues": "jest --selectProjects integrationIssues",
@@ -101,7 +101,8 @@
     "post-commit": "git update-index --again",
     "install-git-hooks": "husky install && shx rm -rf .git/hooks && shx ln -s ../.husky .git/hooks",
     "postversion": "node scripts/prepare-release.mjs",
-    "vercel:pull": "vercel pull --yes"
+    "vercel:pull": "vercel pull",
+    "vercel:pull:ci": "vercel pull --yes"
   },
   "dependencies": {
     "@actions/core": "1.9.1",
