build(deploy): split github and vercel

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -1,11 +1,8 @@
 name: Deploy website
-env:
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
   workflow_dispatch:
 jobs:
-  Website:
+  GitHubWebsite:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
@@ -42,15 +39,22 @@ jobs:
           publish_dir: ./documentation/build
           user_name: ${{ secrets.GIT_COMMITTER_NAME }}
           user_email: ${{ secrets.GIT_COMMITTER_EMAIL }}
-      - name: Deploy to Vercel (production)
-        if: ${{ github.ref == 'refs/heads/master' }}
+  VercelWebsite:
+    runs-on: ubuntu-latest
+    env:
+      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+    steps:
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
+      - name: Install Vercel
+        run: |
+          npm i vercel
+      - name: Pull Vercel
         run: |
           npm run vercel:pull:ci -- --environment=production --token ${{ secrets.VERCEL_LOGIN }}
-          npm run build:docs:vercel -- --token ${{ secrets.VERCEL_LOGIN }}
-          npm run deploy:vercel -- --token ${{ secrets.VERCEL_LOGIN }}
-      - name: Deploy to Vercel (preview)
-        if: ${{ github.ref != 'refs/heads/master' }}
+      - name: Build Vercel
         run: |
-          npm run vercel:pull:ci -- --environment=preview --token ${{ secrets.VERCEL_LOGIN }}
-          npm run build:docs:vercel -- --token ${{ secrets.VERCEL_LOGIN }}
-          npm run deploy:vercel -- --token ${{ secrets.VERCEL_LOGIN }}
+          npm run build:docs:vercel -- --prod --token ${{ secrets.VERCEL_LOGIN }}
+      - name: Deploy Vercel
+        run: |
+          npm run deploy:vercel -- --prebuilt --prod --token ${{ secrets.VERCEL_LOGIN }}
