--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
     "\n# BUILD SCRIPTS:": "",
     "build": "npm run clean:dist && ncc build --license licenses.txt --minify",
     "build:dirty": "ncc build src/main.ts --license licenses.txt --minify",
-    "build:docs:vercel": "vercel build --prod",
+    "build:docs:vercel": "vercel build",
     "\n# DEPLOY SCRIPTS:": "",
-    "deploy:vercel": "vercel deploy --prebuilt",
+    "deploy:vercel": "vercel deploy",
     "\n# TEST SCRIPTS:": "",
     "test": "jest --selectProjects unit integrationIssues integrationPullRequests",
     "test:integration:issues": "jest --selectProjects integrationIssues",
