--- a/documentation/package.json
+++ b/documentation/package.json
@@ -13,7 +13,9 @@
     "clear": "docusaurus clear --config docusaurus.github.config.js",
     "serve": "docusaurus serve --config docusaurus.github.config.js",
     "write-translations": "docusaurus write-translations --config docusaurus.github.config.js",
+    "write-translations:vercel": "docusaurus write-translations --config docusaurus.vercel.config.js",
     "write-translations:french": "npm run write-translations -- --locale fr",
+    "write-translations:french:vercel": "npm run write-translations:vercel -- --locale fr",
     "write-heading-ids": "docusaurus write-heading-ids .",
     "write-heading-ids:changelog": "docusaurus write-heading-ids . docs/15-changelog.md",
     "typecheck": "tsc",
