--- a/action.yml
+++ b/action.yml
@@ -120,6 +120,10 @@ inputs:
     description: 'A list of labels added when the processing stale the issue (multiline).'
     required: false
     default: ''
+  issue-remove-labels-after-stale:
+    description: 'A list of labels removed when the processing stale the issue (multiline).'
+    required: false
+    default: ''
   issue-add-labels-after-close:
     description: 'A list of labels added when the processing close the issue (multiline).'
     required: false
