--- a/action.yml
+++ b/action.yml
@@ -241,6 +241,10 @@ inputs:
     description: 'A list of labels added when the processing stale the pull request (multiline).'
     required: false
     default: ''
+  pull-request-remove-labels-after-stale:
+    description: 'A list of labels removed when the processing stale the pull request (multiline).'
+    required: false
+    default: ''
   pull-request-add-labels-after-close:
     description: 'A list of labels added when the processing close the pull request (multiline).'
     required: false
