chore(renovate): group jest and ts-jest major updates

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -90,6 +90,11 @@
       "groupName": "Semantic release dependencies",
       "matchPackagePatterns": ["^@semantic-release/", "^semantic-release$"],
       "matchUpdateTypes": ["major"]
+    },
+    {
+      "groupName": "Jest major",
+      "matchPackagePatterns": ["^@types/jest$", "^jest$", "^jest-mock$", "^ts-jest$"],
+      "matchUpdateTypes": ["major"]
     }
   ]
 }
