--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "tslib": "2.4.0"
   },
   "devDependencies": {
+    "@octokit/graphql-schema": "12.0.0",
     "@semantic-release/changelog": "6.0.1",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "8.0.6",
