feat(issues): add new input `issue-remove-labels-after-close`
When closing an issue, you can now remove some extra labels.
This might specifically handy if you want to remove the stale label to "clean" the closed issue.
Closes #859.

--- a/action.yml
+++ b/action.yml
@@ -128,6 +128,10 @@ inputs:
     description: 'A list of labels added when the processing close the issue (multiline).'
     required: false
     default: ''
+  issue-remove-labels-after-close:
+    description: 'A list of labels removed when the processing close the issue (multiline).'
+    required: false
+    default: ''
   # Pull request inputs
   ## Labels
   pull-request-stale-label:
