--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.SONIA_BOT_GH_TOKEN }}
       - name: Save current tag
         id: save-current-tag
-        run: echo '::set-output name=CURRENT_TAG::${{ steps.current-tag.outputs.tag }}'
+        run: echo 'CURRENT_TAG=${{ steps.current-tag.outputs.tag }}' >> $GITHUB_OUTPUT
   Release:
     runs-on: ubuntu-latest
     needs: [CurrentTag]
