--- a/documentation/package.json
+++ b/documentation/package.json
@@ -27,29 +27,29 @@
     "npm": "9.5.0"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.3",
-    "@docusaurus/plugin-ideal-image": "2.4.3",
-    "@docusaurus/preset-classic": "2.4.3",
-    "@docusaurus/theme-search-algolia": "2.4.3",
-    "@mdx-js/react": "1.6.22",
-    "@sentry/browser": "7.44.2",
-    "@sentry/tracing": "7.44.2",
-    "clsx": "1.2.1",
-    "prism-react-renderer": "1.3.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@docusaurus/core": "3.7.0",
+    "@docusaurus/plugin-ideal-image": "3.7.0",
+    "@docusaurus/preset-classic": "3.7.0",
+    "@docusaurus/theme-search-algolia": "3.7.0",
+    "@mdx-js/react": "3.1.0",
+    "@sentry/browser": "9.12.0",
+    "clsx": "2.1.1",
+    "prism-react-renderer": "2.4.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.3",
-    "@tsconfig/docusaurus": "1.0.7",
-    "@types/fs-extra": "11.0.3",
-    "@types/lodash": "4.14.200",
+    "@docusaurus/module-type-aliases": "3.7.0",
+    "@docusaurus/tsconfig": "3.7.0",
+    "@types/fs-extra": "11.0.4",
+    "@types/lodash": "4.17.16",
+    "@types/react": "18.3.12",
     "app-root-path": "3.1.0",
-    "chalk": "5.3.0",
-    "fs-extra": "11.1.1",
+    "chalk": "5.4.1",
+    "fs-extra": "11.3.0",
     "lodash": "4.17.21",
-    "moment-timezone": "0.5.43",
-    "typescript": "4.9.5"
+    "moment-timezone": "0.5.48",
+    "typescript": "5.8.3"
   },
   "browserslist": {
     "production": [
