--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "scripts": {
     "\n# BUILD SCRIPTS:": "",
     "build": "npm run clean:dist && ncc build --license licenses.txt --minify",
-    "build:dirty": "ncc build src/main.ts --license licenses.txt --minify",
+    "build:dirty": "ncc build --license licenses.txt --minify",
     "build:docs:vercel": "vercel build",
     "\n# DEPLOY SCRIPTS:": "",
     "deploy:vercel": "vercel deploy",
@@ -160,12 +160,12 @@
     "rimraf": "6.0.1",
     "semantic-release": "20.1.3",
     "shx": "0.4.0",
-    "ts-auto-mock": "3.6.4",
+    "ts-auto-mock": "3.7.4",
     "ts-jest": "29.3.1",
     "ts-node-dev": "2.0.0",
     "tsconfig-paths": "4.2.0",
     "ttypescript": "1.5.15",
-    "typescript": "4.9.5",
+    "typescript": "5.8.3",
     "vercel": "41.5.0",
     "xregexp": "5.1.2"
   }
