chore: fix lint:ts scripts

--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
     "test:ci:coverage:unit": "jest --bail=1 --ci --maxWorkers 2 --silent --collect-coverage --selectProjects unitCi",
     "test:clear-cache": "jest --clear-cache",
     "\n# LINT SCRIPTS:": "",
-    "lint:ts": "eslint --fix --fix-type suggestion,layout,problem --cache --cache-location .eslintcache --quiet **/*.{js,ts,mjs}",
-    "lint:ts:ci": "eslint --quiet **/*.{js,ts,mjs}",
+    "lint:ts": "eslint --fix --fix-type suggestion,layout,problem --cache --cache-location .eslintcache --quiet \"**/*.{js,ts,mjs}\"",
+    "lint:ts:ci": "eslint --quiet \"**/*.{js,ts,mjs}\"",
     "lint:ts:hook": "eslint --fix --fix-type suggestion,layout,problem --cache --cache-location .eslintcache --quiet",
     "lint:other": "prettier --write --ignore-unknown **/*.{md,json,yml,html}",
     "lint:other:this": "prettier --write --ignore-unknown",
