--- a/documentation/package.json
+++ b/documentation/package.json
@@ -33,6 +33,7 @@
     "@docusaurus/theme-search-algolia": "3.7.0",
     "@mdx-js/react": "3.1.0",
     "@sentry/browser": "9.12.0",
+    "@vercel/analytics": "1.5.0",
     "clsx": "2.1.1",
     "prism-react-renderer": "2.4.1",
     "react": "18.3.1",
