--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -7,11 +7,14 @@
 
 name: Labeler
 on:
-  - pull_request
+  - pull_request_target
 jobs:
   Labeler:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/labeler@ac9175f8a1f3625fd0d4fb234536d26811351594 # v4
         with:
-          repo-token: '${{ secrets.SONIA_BOT_GH_TOKEN }}'
+          repo-token: ${{ secrets.SONIA_BOT_GH_TOKEN }}
